add role edit on dashboard
