# src/SMEIoT.Web/Api/V1/AdminUsersController.cs
@@ -1,4 +1,4 @@
-﻿using System.Collections.Generic;
+using System.Collections.Generic;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Http;
@@ -6,6 +6,7 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
 using SMEIoT.Core.Interfaces;
 using SMEIoT.Web.ApiModels;
+using SMEIoT.Web.BindingModels;
 
 namespace SMEIoT.Web.Api.V1
 {
@@ -36,5 +37,33 @@ namespace SMEIoT.Web.Api.V1
 
       return Ok(new AdminUserApiModelList {Users = list});
     }
+
+    [HttpGet("{username}")]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status400BadRequest)]
+    [Authorize(Roles = "Admin")]
+    public async Task<ActionResult<AdminUserApiModel>> Show(string username)
+    {
+      var model = await GetAdminUserResultAsync(username);
+      return Ok(model);
+    }
+
+    [HttpPut("{username}/roles")]
+    [ProducesResponseType(StatusCodes.Status200OK)]
+    [ProducesResponseType(StatusCodes.Status400BadRequest)]
+    [Authorize(Roles = "Admin")]
+    public async Task<ActionResult<UserCredentialsUpdateApiModel>> EditRoles(
+      UserRolesBindingModel binding, string username)
+    {
+      await _userService.UpdateUserRoles(username, binding.Roles);
+      return Ok(await GetAdminUserResultAsync(username));
+    }
+
+    private async Task<AdminUserApiModel> GetAdminUserResultAsync(string username)
+    {
+      var (user, roles) = await _userService.GetUserAndRoleByName(username);
+      return new AdminUserApiModel(user, roles);
+    }
+
   }
 }
